# -*- mode: org -*-
* v4.1.3    UNRELEASED

- For most important sections, if an error occurs while inserting the
  section, the error message is now displayed in the section body.
  #5255

- ~magit-submodule-populate~ now supports ~--recursive~.  #5191 #5256

- Improved ~magit-process-password-prompt-regexps~.  #5257

* v4.1.2    2024-11-02

- Add various minor process logging improvements:
  5b30c05d3a magit--git-insert: Collapse process section if appropriate
  b11524120e magit--git-insert: Optionally always log to process buffer
  cd6cf89d6a Use different face for debug-only process sections
  bba06845de magit-process-insert-section: Improve file-path comparision
  f2a6133443 magit-run-git-async: No longer clutter ~*Messages*~ buffer

Bug fixes:

- If the left margin was in use before ~magit-blame-mode~ started using
  that margin, then the old width was not restored when the mode was
  disabled.  #5236

- Prior to Tramp being loaded, setting ~magit-tramp-pipe-stty-settings~
  to ~nil~ resulted in an error, due to ~tramp-pipe-stty-settings~ not
  being bound yet.  #5240

- ~magit-copy-section-value~ no longer did anything for most section
  types.  #5244.

- Global git arguments often got added twice to the list of arguments
  ultimately passed to git.  914285a5e8

- Inserting the headers of status buffers involves temporary changes
  to ~magit-insert-section-hook~.  These changes were not restricted to
  the current buffer, causing errors when ~magit-git-debug~ is enabled
  and we thus insert sections in the process buffer, while the status
  buffer is being refreshed.  11e13640c4

- Some ~git~ errors were not logged despite ~magit-git-debug~ being
  enabled.  874fb0fede

- ~magit-browse-thing~ and ~magit-visit-thing~ tried to turn anything
  at point into an URL.  Now the bail if there is no URL at point.
  7c842b8ac0

* v4.1.1    2024-10-01

- Avoid unnecessary work when ~auto-revert-remote-files~ is ~nil~.  #5222
