@@ -9,6 +9,12 @@
 
 - Improved ~magit-process-password-prompt-regexps~.  #5257
 
+Bug fixes:
+
+- ~magit-stash-pop~ and ~magit-stash-apply~ sometimes installed conflicts
+  for the user to resolve that are more complicated than they need to
+  be.  #5253
+
 * v4.1.2    2024-11-02
 
 - Add various minor process logging improvements:
